--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     depends_on:
       - fpm
       - redis
+      - mysql
     stop_signal: SIGTERM
 
   # Процесс fpm
@@ -20,32 +21,31 @@ services:
     build: ./docker/php
     volumes:
       - ./:/code
-    environment:
-      REDIS_HOST: redis
-      MYSQL_HOST: ${MYSQL_HOST}
-      MYSQL_PORT: ${MYSQL_PORT}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-    links:
-      - mysql
-      - redis
+#    environment:
+#      REDIS_HOST: redis
+#      MYSQL_HOST: mysql
+#      MYSQL_PORT: 3306
+#      MYSQL_PASSWORD: secret
+#      MYSQL_DATABASE: views
+#      MYSQL_USER: user
+#    links:
+#      - mysql
+#      - redis
 
   # MySQL
   mysql:
-    image: "mysql:8.4"
+    image: "mysql:8.4.0"
 #    command: --default-authentication-plugin=mysql_native_password
     #restart: always
-    volumes:
-      - database:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        MYSQL_ROOT_PASSWORD: secret
+        MYSQL_DATABASE: views
+        MYSQL_USER: user
+        MYSQL_PASSWORD: secret
+    volumes:
+        - database:/var/lib/mysql
     ports:
       - "33061:3306"
-
 
   # Redis
   redis:
