--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     environment:
         MYSQL_ROOT_PASSWORD: secret
         MYSQL_DATABASE: views
-        MYSQL_USER: user
+        MYSQL_USER: root
         MYSQL_PASSWORD: secret
     volumes:
         - database:/var/lib/mysql
