--- a/codeception.yml
+++ b/codeception.yml
@@ -7,7 +7,7 @@ suites:
             enabled:
                 - REST:
                     # адрес настоящего сервиса, заменить на свой
-                    url: https://new-master-kr.kolesa-team.org/ms/views/
+                    url: http://web:8080/
                     depends: PhpBrowser
 
 paths:
